Sync Template: index.html

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@ layout: default
 <!-- ✅ 애니메이션된 소셜 프루프 -->
 <section class="social-proof">
     <div class="stat-item">
-        <h3 class="stat-number" data-target="15000">0</h3>
-        <p>Daily Readers</p>
+        <h3 class="stat-number-static">Deep Analysis</h3>
+        <p>Market Trends</p>
     </div>
     <div class="stat-item">
-        <h3 class="stat-number" data-target="450">0</h3>
-        <p>Articles</p>
+        <h3 class="stat-number-static">Data Driven</h3>
+        <p>Actionable Insights</p>
     </div>
     <div class="stat-item">
-        <h3 class="stat-number" data-target="98">0</h3>
-        <p>Accuracy Rate</p>
+        <h3 class="stat-number-static">Global View</h3>
+        <p>Economic Shift</p>
     </div>
 </section>
 
